--- a/styleInicial.css
+++ b/styleInicial.css
@@ -61,6 +61,46 @@ header .menu-desktop nav ul li {
        color:  #b568e2;
        transition:  0.5s;
      }
+
+     .botaologin {
+         background: #6e0d94;
+        color: #f5f5f5;
+        text-decoration: none;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+      transition: .4;
+     border-color: transparent;
+     }
+.botaologin:hover {
+     background: #eb46a6;
+    color: #ad1372;
+    
+}
+
+     .doacao {
+        background: #ce2db3;
+        color: #050505;
+        border-radius: 34px 64px ;
+        font-size: 1rem;
+        font-weight: 600;
+        text-decoration: none;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+      transition: .4;
+border-color:  transparent;
+
+
+
+     }
+
+   .doacao:hover {
+    background: #eb46a6;
+    color: #ffffff;
+    letter-spacing:  2px;
+
+
+
+   }  
 /* estilo do mundo-site */
 section.mundo-site {
     height: 90vh;
@@ -129,12 +169,59 @@ section .itens-container {
 /*contato*/
 
 .fale {
-    display: flex;
- justify-content: center;
- background-color: #000;
- color: #ffffff;
+background: #ffffff;
+color: #5d0e92;
+display: flex;
+align-items: center;
+justify-content:center;
 }
 
+/*icones*/
+
+.icons-contato {
+display: flex;
+align-content: center;
+align-items: center;
+justify-content: space-around;
+ background: linear-gradient(to right, #e72bd8, #0e1081);
+         color: #f5f5f5;
+
+    }
+.hover:hover {
+    background: #eb46a6;
+    color: #ffffff;
+}
+    .whats {
+    color: #ffffff;
+   
+        width: 30%;
+        display: flex;
+align-items: center;
+flex-direction: column;
+    }
+
+    .insta  {
+   
+    color: #ffffff;
+   
+                width: 30%;
+                display: flex;
+align-items: center;
+flex-direction: column;
+
+
+    }
+
+    .mens {
+
+    color: #ffffff;
+   
+            width: 30%;
+            display: flex;
+align-items: center;
+flex-direction: column;
+
+    }
 
 
 
@@ -151,21 +238,25 @@ section .itens-container {
     background-attachment: fixed;
 }
 
-.oceano button {
- display: flex;
-    align-items: center;
-    justify-content: space-between ;
-    padding: 0 30px;
-    width: 30%;
-    height: 40px;
-    margin: 0 ;
-    border: 2px solid #ffffff;
-    cursor:  pointer;
-    transition:  0.5s;
+
+.bntoceano {
+     background: #ce2db3;
+        color: #050505;
+        border-radius: 34px 64px ;
+        font-size: 1rem;
+        font-weight: 600;
+        text-decoration: none;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+      transition: .4;
+border-color:  transparent;
 }
 
-.oceano button:hover {
-    background-color: #471e88;
+.bntoceano:hover {
+        background: #eb46a6;
+    color: #ffffff;
+    letter-spacing:  2px;
+
 }
 
 .oceano .interface {
@@ -233,11 +324,10 @@ section .itens-container {
     font-size: 20px; 
     font-weight: 80; 
     font-family: 'Impact', 'Arial Black', sans-serif;
-   background-color: #000;
+ background: linear-gradient(to right, #e72bd8, #0e1081);
    color: #ffffff;
 
 }
 
 
-/*acao*/
 
