--- a/styleLogin.css
+++ b/styleLogin.css
@@ -81,6 +81,7 @@ header .menu-desktop nav ul li {
 
 .pai {
 display: flex;
+flex-direction: column;
 height: 100vh;
 justify-content: center;
 align-items: center;
