--- a/styleCadastrar.css
+++ b/styleCadastrar.css
@@ -71,39 +71,86 @@ header .menu-desktop nav ul li {
 
 /*cadastro*/
 
+
 .cadastro {
-display: flex;
-height: 25%;
-justify-content: center;
-align-items: center;
-color: #ffffff;
-background: linear-gradient(to right, #e273d9, #72077c);
-padding: 80px;
-}
-
-input{
-    display: flex;
-    justify-content: center;
+   
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    gap: 8px;
+    padding: 100px;
+    background-image: url(img/img-cadastro-oceano.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    border-radius: 25px;
+    margin: 40px;
+    }
+    
+.div1 {
+    grid-column: span 5 / span 5;
     align-items: center;
-    width: 100%;
-    padding: 10px;
+    justify-content: center;
+    display: flex;
+  background: linear-gradient(to right, #9a6be6, #0e1081);
+  color: #ffffff;
+  font-weight: 100px;
 }
 
-.bntok {
-                 background: #d13eca;
-        color: #f5f5f5;
+.div2 {
+    grid-column: span 5 / span 5;
+    grid-row-start: 2;
+    color: #ad1372;
+    border-color: #0e1081;
+}
+
+.div3 {
+    grid-column: span 3 / span 3;
+    grid-row-start: 3;
+        color: #ad1372;
+         border-color: #0e1081;
+
+}
+
+.div4 {
+    grid-column: span 3 / span 3;
+    grid-row-start: 4;
+        color: #ad1372;
+        
+         border-color: #0e1081;
+
+}
+
+.div5 {
+    grid-column: span 3 / span 3;
+    grid-column-start: 1;
+    grid-row-start: 5;
+        color: #ad1372;
+         border-color: #0e1081;
+
+}
+
+.div6 {
+    grid-row: span 2 / span 2;
+    grid-column-start: 5;
+    grid-row-start: 4;
+         background: #ce2db3;
+        color: #050505;
+        border-radius: 34px 64px ;
+        font-size: 1rem;
+        font-weight: 600;
         text-decoration: none;
         text-transform: uppercase;
         letter-spacing: 2px;
       transition: .4;
-     border-color: transparent;
-     border-radius: 8px;
-      }
+border-color:  transparent;
+}
 
-  .bntok:hover {
+.div6:hover {
+      background: #eb46a6;
+    color: #ad1372;
+    cursor: pointer;
     
-        background: #eb46a6;
-    color: #eee9ec;
-  }
-
-  
+}
+        
