--- a/styleInicial.css
+++ b/styleInicial.css
@@ -60,6 +60,7 @@ header .menu-desktop nav ul li {
        background-color:  #ffffff;
        color:  #b568e2;
        transition:  0.5s;
+       cursor: pointer;
      }
 
      .botaologin {
@@ -74,7 +75,7 @@ header .menu-desktop nav ul li {
 .botaologin:hover {
      background: #eb46a6;
     color: #ad1372;
-    
+    cursor: pointer;
 }
 
      .doacao {
@@ -97,7 +98,7 @@ border-color:  transparent;
     background: #eb46a6;
     color: #ffffff;
     letter-spacing:  2px;
-
+cursor: pointer;
 
 
    }  
@@ -256,6 +257,7 @@ border-color:  transparent;
         background: #eb46a6;
     color: #ffffff;
     letter-spacing:  2px;
+    cursor: pointer;
 
 }
 
@@ -329,5 +331,25 @@ border-color:  transparent;
 
 }
 
+/*rodape*/
+
+.rodape {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  background-color: #050505;
+ color: #f5f5f5;
+ padding: 40px;
+ height: 80px;
+
+}
+
+.rodapeLista {
+    list-style-type: none;
+}
+
+.rodapeLista:hover {
+    cursor: pointer;
+}
 
 
