--- a/styleProjetos.css
+++ b/styleProjetos.css
@@ -5,9 +5,15 @@
      font-family: "Poppins", sans-serif;
 }
 
-header {
- width: 100%;
- background-color:#ffffff;
+body {
+    background-color: white; 
+    color: black;
+    transition: background-color 0.5s, color 0.5s; 
+}
+
+body.dark-mode {
+    background-color: #1a1a1a; 
+    color: #f0f0f0;
  }
 
 header .interface {
@@ -85,4 +91,80 @@ header .menu-desktop nav ul li {
 
 .rodapeLista:hover {
     cursor: pointer;
+}
+
+/*tema*/
+
+.checkBox {
+    display: none;     
+}
+
+
+.label {
+    width: 60px; 
+    height: 30px; 
+    background-color: #111; 
+    display: flex;
+    border-radius: 50px; 
+    align-items: center;
+    justify-content: space-around;
+    padding: 0 5px;
+    cursor: pointer;
+    position: relative;
+    transition: background-color 0.3s;
+}
+
+
+.ball {
+    width: 25px; 
+    height: 25px;
+    background-color: white;
+    position: absolute; 
+    top: 2.5px;
+    left: 2.5px;
+    border-radius: 50%;
+    transition: transform 0.3s linear;
+}
+
+
+
+
+.checkBox:checked + .label .ball {
+    transform: translateX(30px); 
+    background-color: #222;
+}
+
+.checkBox:checked + .label {
+    background-color: #999; 
+}
+
+
+.label .bi-sun {
+    color: yellow;
+    z-index: 1;
+    opacity: 1;
+    transition: opacity 0.3s;
+}
+
+.label .bi-moon-fill {
+    color: white;
+    z-index: 1;
+    opacity: 0; 
+    transition: opacity 0.3s;
+}
+
+.checkBox:checked + .label .bi-sun {
+    opacity: 0;
+}
+
+.checkBox:checked + .label .bi-moon-fill {
+    opacity: 1;
+}
+
+/*galeria*/
+
+.project-card img {
+width: 100%;
+height: 200px;
+object-fit: cover;
 }
